add length contraction and photon

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
         <table>
           <tr>
             <td class="stationary-clock-label">Stationary Time: </td>
-            <td id="stationaryTime" class="stationary-clock-value"></td>
+            <td id="stationaryTime" class="stationary-clock-value">00:00:00</td>
           </tr>
           <tr>
             <td class="moving-clock-label">Moving Time: </td>
-            <td id="movingTime" class="moving-clock-value"></td>
+            <td id="movingTime" class="moving-clock-value">00:00:00</td>
           </tr>
       </div>
+      <button id="startButton">Start</button>
       <button id="pauseButton">Pause</button>
       <button id="resetButton">Reset</button>
     </div>
