initial implementation of controls

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <input id="speedSlider" value="0" type="range" step="0.01" min="0" max=".99" />
         <div id="sliderLabel">Speed of traveller (fraction of speed of light): </div>
         <div id="labelValue">0</div>
+        <div>gamma:</div>
+        <div id="gammaLabel">1</div>
+        <input id="pauseTime" value="0" type="number"/>
+        <div>pause time(s)</div>
         <table>
           <tr>
             <td class="stationary-clock-label">Stationary Time: </td>
