initial implementation of non-observer clock

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
             <td id="stationaryTime" class="stationary-clock-value">00:00:00</td>
           </tr>
           <tr>
-            <td class="moving-clock-label">Moving Time: </td>
-            <td id="movingTime" class="moving-clock-value">00:00:00</td>
+            <td class="moving-clock-home-label">Moving Time At Home: </td>
+            <td id="movingHomeTime" class="moving-clock-value">00:00:00</td>
+          <tr>
+            <td class="moving-clock-traveller-label">Moving Time At Traveller Location: </td>
+            <td id="movingTravellerTime" class="moving-clock-value">00:00:00</td>
+          </tr>
           </tr>
       </div>
       <button id="startButton">Start</button>
