show speed of light is the same in both frames

--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
             <td id="stationaryTime" class="stationary-clock-value">00:00:00</td>
           </tr>
           <tr>
+            <td class="moving-photon-clock-label">Photon Moving Time: </td>
+            <td id="movingPhotonTime" class="moving-photon-clock-value">00:00:00</td>
+          </tr>
+          <tr>
             <td class="moving-clock-label">Moving Time: </td>
             <td id="movingTime" class="moving-clock-value">00:00:00</td>
           </tr>
       </div>
       <button id="startButton">Start</button>
       <button id="pauseButton">Pause</button>
-      <button id="resetButton">Reset</button>
+      <!--<button id="resetButton">Reset</button>-->
     </div>
 </html>
