add initial pause time

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div id="labelValue">0</div>
         <div>gamma:</div>
         <div id="gammaLabel">1</div>
-        <input id="pauseTime" value="0" type="number"/>
-        <div>pause time(s)</div>
+        <input id="pauseTime" value="5" type="number"/>
+        <div>pause time(sec)</div>
         <table>
           <tr>
             <td class="stationary-clock-label">Stationary Time: </td>
