--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       </div>
       <button id="startButton">Start</button>
       <button id="pauseButton">Pause</button>
-      <!--<button id="resetButton">Reset</button>-->
+      <button id="resetButton">Reset</button>
     </div>
 </html>
