get rid of second moving clock

--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
             <td class="moving-photon-clock-label">Photon Moving Time: </td>
             <td id="movingPhotonTime" class="moving-photon-clock-value">00:00:00</td>
           </tr>
-          <tr>
-            <td class="moving-clock-label">Moving Time: </td>
-            <td id="movingTime" class="moving-clock-value">00:00:00</td>
-          </tr>
+        </table>
       </div>
       <button id="startButton">Start</button>
       <button id="pauseButton">Pause</button>
