--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
       </div>
       <button id="startButton">Start</button>
       <button id="resetButton">Reset</button>
+      <button id="recenterXButton">Recenter X Coordinate</button>
+      <button id="recenterYButton">Recenter Y Coordinate</button>
     </div>
 </html>
