show other perspective

--- a/index.html
+++ b/index.html
@@ -25,12 +25,20 @@
         <div>pause time(sec)</div>
         <table>
           <tr>
-            <td class="stationary-clock-label">Stationary Time: </td>
-            <td id="stationaryTime" class="stationary-clock-value">00:00:00</td>
+            <td class="moving-photon-clock-label-A">Photon Moving Time A: </td>
+            <td id="movingPhotonTimeA" class="moving-photon-clock-valueA">00:00:00</td>
           </tr>
           <tr>
-            <td class="moving-photon-clock-label">Photon Moving Time: </td>
-            <td id="movingPhotonTime" class="moving-photon-clock-value">00:00:00</td>
+            <td class="stationary-clock-label-A">Stationary Time A: </td>
+            <td id="stationaryTimeA" class="stationary-clock-valueA">00:00:00</td>
+          </tr>
+          <tr>
+            <td class="stationary-clock-label-B">Stationary Time B: </td>
+            <td id="stationaryTimeB" class="stationary-clock-valueB">00:00:00</td>
+          </tr>
+          <tr>
+            <td class="moving-photon-clock-label-B">Photon Moving Time B: </td>
+            <td id="movingPhotonTimeB" class="moving-photon-clock-valueB">00:00:00</td>
           </tr>
         </table>
       </div>
