--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <html>
   <head>
     <title>Special Relativity Three</title>
-    <link href="styles.css" rel="stylesheet"/>
-    <style>
-      body { margin: 0; }
-      canvas { width: 100%; height: 100%; };
-    </style>
+    <link href="/styles.8986bff4.css" rel="stylesheet">
+    <style>body { margin: 0; }
+      canvas { width: 100%; height: 100%; };</style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
-  </head>
+  <script src="/styles.8986bff4.js"></script></head>
 
   <body>
     <!-- <script src="./index.js"></script> -->
     
-    <script src="js/three.js"></script>
-    <script src="js/threeImplementation.js" defer></script>
+    <script src="/three.bf944244.js"></script>
+    <script src="/threeImplementation.8ff572f5.js" defer=""></script>
     <div class="outer-container">
       <div class="clock-container">
-        <input id="speedSlider" value="0" type="range" step="0.01" min="0" max=".99" />
+        <input id="speedSlider" value="0" type="range" step="0.01" min="0" max=".99">
         <div id="sliderLabel">Speed of traveller (fraction of speed of light): </div>
         <div id="labelValue">0</div>
         <div>gamma:</div>
         <div id="gammaLabel">1</div>
-        <input id="pauseTime" value="5" type="number"/>
+        <input id="pauseTime" value="5" type="number">
         <div>pause time(sec)</div>
         <table>
           <tr>
@@ -39,4 +37,4 @@
       <button id="recenterXButton">Recenter X Coordinate</button>
       <button id="recenterYButton">Recenter Y Coordinate</button>
     </div>
-</html>
+</body></html>
