--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Special Relativity Three</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="./styles.css" rel="stylesheet"/>
     <style>
       body { margin: 0; }
       canvas { width: 100%; height: 100%; };
@@ -12,8 +12,8 @@
   <body>
     <!-- <script src="./index.js"></script> -->
     
-    <script src="js/three.js"></script>
-    <script src="js/threeImplementation.js" defer></script>
+    <script src="./js/three.js"></script>
+    <script src="./js/threeImplementation.js" defer></script>
     <div class="outer-container">
       <div class="clock-container">
         <input id="speedSlider" value="0" type="range" step="0.01" min="0" max=".99" />
